--- a/Final_Project_Part_1.Rmd
+++ b/Final_Project_Part_1.Rmd
@@ -13,7 +13,11 @@ output:
 # Final Project Part 1
 ## Clinical data Analysis
 
-### Download the data
+# ==============================================================================
+# SECTION 1: DATA PREPROCESSING
+# ==============================================================================
+
+## 1.1 Download the data
 ```{r}
 RNAseq_KIRC <- read.csv("RNAseq_KIRC.csv")
 data_clinical_patient <- read.delim("data_clinical_patient.txt", header = TRUE, sep = "\t", skip = 4)
@@ -21,7 +25,7 @@ data_mutations <- read.delim("data_mutations.txt", header = TRUE, sep = "\t", st
 head(data_clinical_patient)
 ```
 
-### Run the intersect of all the patient sets - code reused from lab 7 submission
+## 1.2 Run the intersect of all the patient sets - code reused from lab 7 submission
 ```{r}
 # RNAseq_KIRC dataset
 rna_patient_ids <- gsub("\\.", "-", substr(colnames(RNAseq_KIRC), 1, 12))
@@ -36,7 +40,7 @@ mutation_patient_ids <- unique(substr(data_mutations$Tumor_Sample_Barcode, 1, 12
 common_patients <- Reduce(intersect, list(rna_patient_ids, clinical_patient_ids, mutation_patient_ids))
 ```
 
-### Data Cleaning
+## 1.3 Data Cleaning
 ```{r}
 # Tumour Stage: AJCC_PATHOLOGIC_TUMOR_STAGE
 # OS: Overall Survival - Time from the start of the study/treatment to death from any cause.
@@ -117,8 +121,11 @@ data_clinical_patient <- data_clinical_patient %>%
 head(data_clinical_patient, 100)
 ```
 
-## Data Exploration 
-### Age of KIRC Patients
+# ==============================================================================
+# SECTION 2: DATA EXPLORATION
+# ==============================================================================
+
+## 2.1 Age of KIRC Patients
 ```{r}
 # Age associated with patients
 # Check this - I got rid of matching step 
@@ -143,7 +150,7 @@ ggplot(age_df, aes(x = AGE)) +
 
 What did we notice?
 
-### Tumor Stage of KIRC Patients
+## 2.2 Tumor Stage of KIRC Patients
 ```{r}
 # Tumor stage associated with patients
 # Convert to a dataframe
@@ -162,7 +169,7 @@ ggplot(stage_df, aes(x = STAGE)) +
 
 What did we notice?
 
-### Sex, Ethnicity, Race, and Ancestry of KIRC Patients
+## 2.3 Sex, Ethnicity, Race, and Ancestry of KIRC Patients
 ```{r}
 # Find the different Categories
 #head(data_clinical_patient, 30)
@@ -221,7 +228,7 @@ plot_donut(data_clinical_patient, "GENETIC_ANCESTRY_LABEL", "Ancestry Distributi
 
 What did we notice?
 
-### Survival Analysis of Overall Survival (OS)
+## 2.4 Survival Analysis of Overall Survival (OS)
 ```{r}
 
 library(survival)
@@ -248,7 +255,7 @@ ggsurvplot(fit_os,
 
 What did we notice?
 
-### Survival Analysis of Disease-Specific Survival (DSS)
+## 2.5 Survival Analysis of Disease-Specific Survival (DSS)
 ```{r}
 surv_dss <- Surv(time = data_clinical_patient$DSS_MONTHS, 
                  event = 1 - data_clinical_patient$DSS_STATUS)
@@ -268,7 +275,7 @@ ggsurvplot(fit_dss,
 
 What did we notice?
 
-### Survival Analysis of Progression-Free Survival(PFS)
+## 2.6 Survival Analysis of Progression-Free Survival(PFS)
 ```{r}
 surv_pfs <- Surv(time = data_clinical_patient$PFS_MONTHS, 
                  event = 1 - data_clinical_patient$PFS_STATUS)
@@ -288,7 +295,7 @@ ggsurvplot(fit_pfs,
 
 What did we notice?
 
-### Survival Analysis of Disease-Free Survival (DFS)
+## 2.7 Survival Analysis of Disease-Free Survival (DFS)
 ```{r}
 surv_dfs <- Surv(time = data_clinical_patient$DFS_MONTHS, 
                  event = 1 - data_clinical_patient$DFS_STATUS)
@@ -308,7 +315,7 @@ ggsurvplot(fit_dfs,
 
 What did we notice?
 
-### Survival Analysis of Age
+## 2.8 Survival Analysis of Age
 ```{r}
 # Create age groups (above vs below median)
 median_age <- median(data_clinical_patient$AGE, na.rm = TRUE)
@@ -338,7 +345,7 @@ ggsurvplot(fit_age,
 
 What did we notice?
 
-### Survival Analysis of Cancer Stage
+## 2.9 Survival Analysis of Cancer Stage
 ```{r}
 # Make sure stage is factor
 data_clinical_patient$STAGE_FACTOR <- factor(data_clinical_patient$AJCC_PATHOLOGIC_TUMOR_STAGE)
@@ -365,7 +372,7 @@ ggsurvplot(fit_stage,
 
 What did we notice?
 
-### Survival Analysis of Sex
+## 2.10 Survival Analysis of Sex
 ```{r}
 # Make sure sex is factor
 data_clinical_patient$SEX <- factor(ifelse(is.na(data_clinical_patient$SEX) | 
@@ -394,7 +401,7 @@ ggsurvplot(fit_sex,
 
 ## Analyses
 
-==============================================================================
+# ==============================================================================
 # SECTION 3: MUTATION DATA ANALYSIS
 # ==============================================================================
 
@@ -402,7 +409,7 @@ ggsurvplot(fit_sex,
 # INVESTIGATION 1: Top 20 Most Mutated Genes
 # ==============================================================================
 
-## 3.1 Build Gene-Patient Mutation Matrix (Data Frame)
+## 3.1.1 Build Gene-Patient Mutation Matrix (Data Frame)
 # Create binary matrix: rows = genes, columns = patients
 We decided to keep only the damaging mutations and exclude the potentially damageable or non-damageable mutations.
 ```{r inv1_matrix}
@@ -444,7 +451,7 @@ for (i in 1:nrow(non_synonymous_dataset)) {
 gene_patient_matrix <- as.data.frame(gene_patient_matrix)
 ```
 
-## 3.2 Calculate Mutation Frequencies
+## 3.1.2 Calculate Mutation Frequencies
 # Sum mutations across all patients for each gene
 ```{r inv1_frequency}
 # Create a relative frequency vector
@@ -463,7 +470,7 @@ top_20_genes <- head(gene_frequency_vector, 20)
 top_20_genes
 ```
 
-## 3.3 Visualize Top 20 Mutated Genes
+## 3.1.3 Visualize Top 20 Mutated Genes
 # Create bar plot or lollipop chart
 ```{r inv1_visualize}
 # Create visualization of top 20 genes. Create a relative frequency so the data makes more sense
@@ -483,169 +490,25 @@ ggplot(top_20_genes, aes(x = reorder(Hugo_Symbol, -Frequency), y = Frequency)) +
 **Observations:**
 # [COMMENT HERE: Which genes are most frequently mutated? Any expected oncogenes?]
 
-
 # ==============================================================================
-# INVESTIGATION 2: Hierarchical Clustering of Mutated Genes
-# ==============================================================================
-
-## 3.4 Prepare Data for Hierarchical Clustering
-# Use gene-patient matrix with top genes or all genes
-```{r inv2_prep}
-# Decide on genes to include (top N or all with sufficient mutations)
-# [INSERT CODE HERE]
-
-# Prepare matrix for clustering (may need to transpose)
-# [INSERT CODE HERE]
-
-# Handle missing values if any
-# [INSERT CODE HERE]
-```
-
-## 3.5 Apply Ward Hierarchical Clustering
-# Perform hierarchical clustering with Ward linkage
-```{r inv2_ward}
-# Calculate distance matrix
-# Suggested distance: Euclidean or Binary (Jaccard/Hamming)
-# [INSERT CODE HERE]
-
-# Apply Ward linkage clustering
-# [INSERT CODE HERE]
-
-# Generate dendrogram
-# [INSERT CODE HERE]
-
-# Determine optimal number of clusters
-# Methods: dendrogram inspection, silhouette analysis, elbow method
-# [INSERT CODE HERE]
-
-# Cut dendrogram to create cluster assignments
-# [INSERT CODE HERE]
-
-# Display cluster sizes
-# [INSERT CODE HERE]
-```
-
-## 3.6 Apply Ward.D2 Hierarchical Clustering
-# Repeat with Ward.D2 linkage method
-```{r inv2_ward_d2}
-# Apply Ward.D2 linkage clustering
-# [INSERT CODE HERE]
-
-# Generate dendrogram
-# [INSERT CODE HERE]
-
-# Cut dendrogram for cluster assignments
-# [INSERT CODE HERE]
-
-# Compare cluster sizes with Ward method
-# [INSERT CODE HERE]
-```
-
-## 3.7 Compare Clustering Methods
-# Evaluate agreement between Ward and Ward.D2
-```{r inv2_compare}
-# Create comparison table or confusion matrix
-# [INSERT CODE HERE]
-
-# Calculate agreement metrics (e.g., Adjusted Rand Index)
-# [INSERT CODE HERE]
-```
-
-**Observations:**
-# [COMMENT HERE: Do both methods identify similar clusters? Which seems better?]
-
-
-# ==============================================================================
-# INVESTIGATION 3: Patient Outcomes Across Hierarchical Clusters
+# INVESTIGATION 2: Density-Based Clustering (HDBSCAN)
 # ==============================================================================
 
-## 3.8 Assign Patients to Clusters
-# Link cluster assignments to patient clinical data
-```{r inv3_assign}
-# Add cluster assignment to clinical data
-# Use clusters from best hierarchical method (Ward or Ward.D2)
-# [INSERT CODE HERE]
-
-# Display cluster distribution
-# [INSERT CODE HERE]
-```
-
-## 3.9 Kaplan-Meier Curves by Cluster
-# Compare survival outcomes across clusters
-```{r inv3_survival}
-# --- Overall Survival (OS) ---
-# [INSERT CODE HERE]
-
-# --- Disease-Specific Survival (DSS) ---
-# [INSERT CODE HERE]
-
-# --- Progression-Free Survival (PFS) ---
-# [INSERT CODE HERE]
-
-# --- Disease-Free Survival (DFS) ---
-# [INSERT CODE HERE]
-
-# Perform log-rank tests for each outcome
-# [INSERT CODE HERE]
-```
-
-**Observations:**
-# [COMMENT HERE: Do clusters show different survival patterns?]
-
-## 3.10 ANOVA for Continuous Variables
-# Test if age differs significantly across clusters
-```{r inv3_anova}
-# One-way ANOVA for age
-# [INSERT CODE HERE]
-
-# If significant, perform Tukey HSD post-hoc test
-# [INSERT CODE HERE]
-
-# Visualize age distribution by cluster (boxplot)
-# [INSERT CODE HERE]
-```
-
-**Observations:**
-# [COMMENT HERE: Do clusters have different age distributions?]
-
-## 3.11 Chi-Square Tests for Categorical Variables
-# Test if categorical variables differ across clusters
-```{r inv3_chisq}
-# --- Tumor Stage ---
-# [INSERT CODE HERE]
-
-# --- Sex ---
-# [INSERT CODE HERE]
-
-# --- Ethnicity ---
-# [INSERT CODE HERE]
-
-# Create contingency tables and visualizations
-# [INSERT CODE HERE]
-```
-
-**Observations:**
-# [COMMENT HERE: Which clinical variables differ by cluster?]
-
-
-# ==============================================================================
-# INVESTIGATION 4: Density-Based Clustering (HDBSCAN)
-# ==============================================================================
-
-## 3.12 Prepare Data for HDBSCAN
+## 3.2.1 Prepare Data for HDBSCAN
 # Use same gene-patient matrix as hierarchical clustering
 ```{r inv4_prep}
+# Load the library
 library(dbscan)
 
-# Prepare matrix (same as Investigation 2)
-# [INSERT CODE HERE]
+# Prepare matrix for clustering
+gene_patient_matrix <- t(gene_patient_matrix)
 
 # Optional: Perform dimensionality reduction for visualization
 # Methods: PCA, t-SNE, UMAP
 # [INSERT CODE HERE]
 ```
 
-## 3.13 Apply HDBSCAN Clustering
+## 3.2.2 Apply HDBSCAN Clustering
 # Perform density-based clustering
 ```{r inv4_hdbscan}
 # Apply HDBSCAN with parameter tuning
@@ -659,7 +522,7 @@ library(dbscan)
 # [INSERT CODE HERE]
 ```
 
-## 3.14 Visualize HDBSCAN Clusters
+## 3.2.3 Visualize HDBSCAN Clusters
 # Plot clusters in reduced dimensional space
 ```{r inv4_visualize}
 # If dimensionality reduction was performed, create scatter plot
@@ -675,10 +538,10 @@ library(dbscan)
 
 
 # ==============================================================================
-# INVESTIGATION 5: Patient Outcomes Across HDBSCAN Clusters
+# INVESTIGATION 3: Patient Outcomes Across HDBSCAN Clusters
 # ==============================================================================
 
-## 3.15 Assign Patients to HDBSCAN Clusters
+## 3.3.1 Assign Patients to HDBSCAN Clusters
 # Link HDBSCAN cluster assignments to clinical data
 ```{r inv5_assign}
 # Add HDBSCAN cluster to clinical data
@@ -692,7 +555,7 @@ library(dbscan)
 # [INSERT CODE HERE]
 ```
 
-## 3.16 Kaplan-Meier Curves by HDBSCAN Cluster
+## 3.3.2 Kaplan-Meier Curves by HDBSCAN Cluster
 # Compare survival outcomes across density-based clusters
 ```{r inv5_survival}
 # --- Overall Survival (OS) ---
@@ -714,7 +577,7 @@ library(dbscan)
 **Observations:**
 # [COMMENT HERE: Do HDBSCAN clusters differ in survival?]
 
-## 3.17 ANOVA for Continuous Variables (HDBSCAN)
+## 3.3.3 ANOVA for Continuous Variables (HDBSCAN)
 # Test age differences across HDBSCAN clusters
 ```{r inv5_anova}
 # One-way ANOVA for age
@@ -727,7 +590,7 @@ library(dbscan)
 # [INSERT CODE HERE]
 ```
 
-## 3.18 Chi-Square Tests for Categorical Variables (HDBSCAN)
+## 3.3.4 Chi-Square Tests for Categorical Variables (HDBSCAN)
 # Test categorical variable differences
 ```{r inv5_chisq}
 # Tumor stage, sex, ethnicity, etc.
@@ -737,7 +600,7 @@ library(dbscan)
 # [INSERT CODE HERE]
 ```
 
-## 3.19 Compare Hierarchical vs HDBSCAN Results
+## 3.3.5 Compare Hierarchical vs HDBSCAN Results
 # Evaluate which clustering method better separates patient subgroups
 ```{r inv5_compare}
 # Compare statistical significance of survival differences
@@ -755,10 +618,10 @@ library(dbscan)
 
 
 # ==============================================================================
-# INVESTIGATION 6: Co-Mutation and Mutual Exclusivity Analysis
+# INVESTIGATION 4: Co-Mutation and Mutual Exclusivity Analysis
 # ==============================================================================
 
-## 3.20 Create Fisher's Exact Test Function
+## 3.4.1 Create Fisher's Exact Test Function
 # Function to test co-occurrence or mutual exclusivity between gene pairs
 ```{r inv6_function}
 # Function: fisher_test_genes(gene1, gene2, mutation_matrix)
@@ -767,7 +630,7 @@ library(dbscan)
 # [INSERT CODE HERE]
 ```
 
-## 3.21 Test All Pairwise Combinations of Top 20 Genes
+## 3.4.2 Test All Pairwise Combinations of Top 20 Genes
 # Run Fisher's exact test for all gene pairs
 ```{r inv6_pairwise}
 # Get top 20 genes from Investigation 1
@@ -781,7 +644,7 @@ library(dbscan)
 # [INSERT CODE HERE]
 ```
 
-## 3.22 Multiple Testing Correction
+## 3.4.3 Multiple Testing Correction
 # Adjust p-values for multiple comparisons
 ```{r inv6_correction}
 # Apply Bonferroni correction
@@ -794,7 +657,7 @@ library(dbscan)
 # [INSERT CODE HERE]
 ```
 
-## 3.23 Identify Co-Mutation and Mutual Exclusivity
+## 3.4.4 Identify Co-Mutation and Mutual Exclusivity
 # Classify significant gene pairs
 ```{r inv6_classify}
 # Co-mutation: Odds ratio > 1 and significant p-value
@@ -810,7 +673,7 @@ library(dbscan)
 # [INSERT CODE HERE]
 ```
 
-## 3.24 Visualize Gene-Gene Relationships
+## 3.4.5 Visualize Gene-Gene Relationships
 # Create heatmap and network diagram
 ```{r inv6_visualize}
 # Create heatmap of odds ratios for top 20 genes
@@ -830,10 +693,10 @@ library(dbscan)
 
 
 # ==============================================================================
-# INVESTIGATION 7: Disease-Specific Survival and Top 20 Genes
+# INVESTIGATION 5: Disease-Specific Survival and Top 20 Genes
 # ==============================================================================
 
-## 3.25 Survival Analysis for Each Top Gene
+## 3.5.1 Survival Analysis for Each Top Gene
 # Test association between each gene mutation and DSS
 ```{r inv7_individual}
 # For each of the top 20 genes:
@@ -847,7 +710,7 @@ library(dbscan)
 # [INSERT CODE HERE]
 ```
 
-## 3.26 Multiple Testing Correction
+## 3.5.2 Multiple Testing Correction
 # Adjust p-values for 20 comparisons
 ```{r inv7_correction}
 # Apply Bonferroni or FDR correction
@@ -857,7 +720,7 @@ library(dbscan)
 # [INSERT CODE HERE]
 ```
 
-## 3.27 Visualize Results
+## 3.5.3 Visualize Results
 # Create forest plot and summary table
 ```{r inv7_visualize}
 # Create forest plot of hazard ratios with confidence intervals
@@ -873,36 +736,6 @@ library(dbscan)
 
 **Observations:**
 # [COMMENT HERE: Which genes are most strongly associated with DSS? Protective or harmful?]
-
-
-## 3.28 ALTERNATIVE ANALYSIS: Synonymous vs Non-Synonymous Mutations
-# Compare survival outcomes by mutation type
-```{r inv7_mutation_type}
-# Filter mutations by type
-# Variant_Classification column contains mutation type information
-# [INSERT CODE HERE]
-
-# Classify mutations as synonymous or non-synonymous
-# Non-synonymous: Missense, Nonsense, Frame_Shift, Splice_Site, etc.
-# Synonymous: Silent mutations
-# [INSERT CODE HERE]
-
-# For each top gene, compare DSS between:
-# 1. Patients with non-synonymous mutations
-# 2. Patients with synonymous mutations
-# 3. Patients with no mutations (reference)
-# [INSERT CODE HERE]
-
-# Kaplan-Meier curves stratified by mutation type
-# [INSERT CODE HERE]
-
-# Statistical tests (log-rank, Cox regression)
-# [INSERT CODE HERE]
-```
-
-**Observations:**
-# [COMMENT HERE: Do non-synonymous mutations have worse outcomes than synonymous?]
-
 
 # ==============================================================================
 # SECTION 4: COMPREHENSIVE RESULTS SUMMARY
